--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "engines" : { "node" : ">=0.12" }
   }
 }
